// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `<ArticleError />`;

exports[`2. loading 1`] = `null`;

exports[`3. an article with no headline falls back to use shortheadline 1`] = `
<ArticleSkeleton>
  <View>
    <View>
      <ModalImage
        aspectRatio={1}
        uri="https://image.io"
      />
      <Text>
        Some Short Headline
      </Text>
      <View>
        <View>
          <ArticleBylineWithLinks
            ast={
              Array [
                Object {
                  "byline": Array [
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Some byline",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "inline",
                    },
                  ],
                  "image": Object {
                    "crop": Object {
                      "ratio": "1:1",
                      "url": "https://image.io",
                    },
                    "id": "36f9b2e8-0d41-464a-9e95-921bdb6895be",
                  },
                },
              ]
            }
          />
        </View>
        <View>
          <Text>
            Friday March 13 2015, 6.54pm, The Times
          </Text>
        </View>
      </View>
    </View>
  </View>
</ArticleSkeleton>
`;

exports[`4. an article with ads 1`] = `
<ArticleSkeleton>
  <View>
    <View>
      <ModalImage
        aspectRatio={1}
        uri="https://image.io"
      />
      <Text>
        Some Headline
      </Text>
      <View>
        <View>
          <ArticleBylineWithLinks
            ast={
              Array [
                Object {
                  "byline": Array [
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Some byline",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "inline",
                    },
                  ],
                  "image": Object {
                    "crop": Object {
                      "ratio": "1:1",
                      "url": "https://image.io",
                    },
                    "id": "36f9b2e8-0d41-464a-9e95-921bdb6895be",
                  },
                },
              ]
            }
          />
        </View>
        <View>
          <Text>
            Friday March 13 2015, 6.54pm, The Times
          </Text>
        </View>
      </View>
    </View>
  </View>
</ArticleSkeleton>
`;
